Fixes for jpetstore discovery